--- a/lib/gallows_web/templates/hangman/game_field.html.eex
+++ b/lib/gallows_web/templates/hangman/game_field.html.eex
@@ -1,4 +1,5 @@
 <h1>Game Field</h1>
+<%= game_state(@tally.game_state) %>
 <div class="row">
   <p>
     Game State: <%= @tally.game_state %>
@@ -20,9 +21,14 @@
   </p> 
 </div>
 
-<%= form_for(@conn, Routes.hangman_path(@conn, :make_move), [as: :make_move, method: :put], fn f -> %>
-  <div class="form-group row">
-    <%= text_input(f, :guess, class: "form-control") %>
-    <%= submit("Make next move") %>
-  </div>
-<% end) %>
+<%= if game_over?(@tally) do %>
+  <%= new_game_button(@conn) %>
+<% else %>
+  <%= form_for(@conn, Routes.hangman_path(@conn, :make_move), [as: :make_move, method: :put], fn f -> %>
+    <div class="form-group row">
+      <%= text_input(f, :guess, class: "form-control") %>
+      <%= submit("Make next move") %>
+    </div>
+  <% end) %>
+<% end %>
+
